turn off job notice

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ $('body').prepend("<div id='notification-bar' style='display:none; width:100%; h
  });
 }
 
-showNotificationBar("geoBoundaries is <a href='https://jobs.wm.edu/postings/49580'>hiring</a>!  Apply by Aug 16.");
+/*showNotificationBar("geoBoundaries is <a href='https://jobs.wm.edu/postings/49580'>hiring</a>!  Apply by Aug 16.");*/
 </script>
 </body>
 
