--- a/geoContrast.html
+++ b/geoContrast.html
@@ -107,7 +107,7 @@
 											<li>
 												<img id="legend-symbol-basemap" src="images/1200px-Picture_icon_BLACK.svg.png"/>
 												<select id="select-basemap" onchange="setBaseMap(this.value)">
-													<option value="maptiler" selected>MapTiler Satellite</option>
+													<option value="google" selected>Google Satellite</option>
 													<option value="esri">ESRI World Street Map</option>
 													<option value="osm">OpenStreetMap</option>
 												</select>
