Shifting to HPC dev

--- a/gb5/index.html
+++ b/gb5/index.html
@@ -28,14 +28,20 @@
 							<nav id="nav">
 								<ul>
 									<li class="current"><a href="index.html">Home</a></li>
-									<li><a href="right-sidebar.html">Visualize Data</a></li>
+									<li>
+										<a href="right-sidebar.html">Visualize Data</a>
+										<ul>
+											<li><a href="#">Characteristics (i.e., Population)</a></li>
+											<li><a href="#">Contrast Boundary Datasets</a></li>
+											<li><a href="#">Geoparsing Tools</a></li>
+										</ul>
+									</li>
 									<li>
 										<a href="#">Download Data</a>
 										<ul>
 											<li><a href="countryDownloads.html">Individual Country Files</a></li>
 											<li><a href="#">Global Composite Downloads</a></li>
 											<li><a href="#">API</a></li>
-											<li><a href="#">Research Replication</a></li>
 											
 										</ul>
 									</li>
@@ -61,7 +67,7 @@
 						<div class="row">
 							<div class="col-7 col-12-medium">
 								<h2>This is geoBoundaries.</h2>
-								<p>A free, open database of political administrative boundaries.</p>
+								<p>A free, open database of political administrative boundaries, and the conditions within them.</p>
 							</div>
 							<div class="col-5 col-12-medium">
 								<ul>
@@ -114,10 +120,10 @@
 										<a href="#" class="image featured"><img src="images/africa.png" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Contrast & Compare</h2>
-												<p>"What else is out there?"</p>
+												<h2>Population & Other Data</h2>
+												<p>"What are conditions like?"</p>
 											</header>
-											<p>Visualize geoBoundaries, and compare our data to other boundary datasets.</p>
+											<p>Visualize a range of information on the conditions within each boundary.</p>
 										</div>
 									</section>
 
@@ -154,7 +160,7 @@
 									<div id="content">
 										<section class="last">
 											<h2>So what's this all about?</h2>
-											<p>Built by the <a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">community</a> and <a href="https://geolab.wm.edu">William & Mary geoLab</a>, the <strong>geoBoundaries Global Database of Political Administrative Boundaries Database</strong> is an online, open license (<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>) resource of boundaries (i.e., state, county) for every country in the world. Since 2016, we have tracked approximately 1 million boundaries within over 200 entities, including all UN member states. All boundaries are available to view or download in	common file formats; the only requirement for use is <a href="index.html#usage">acknowledgement</a>.  
+											<p>Built by the <a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">community</a> and <a href="https://geolab.wm.edu">William & Mary geoLab</a>, the <strong>geoBoundaries Global Database of Political Administrative Boundaries Database</strong> is an online, open license (<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>) resource of information on (a) the geographic location of, and (b) conditions within administrative boundaries (i.e., state, county) for every country in the world. Since 2016, we have tracked approximately 1 million boundaries within over 200 entities, including all UN member states. All boundaries are available to view or download in	common file formats; the only requirement for use is <a href="index.html#usage">acknowledgement</a>.  
 											</p>
 										</section>
 									</div>
@@ -246,14 +252,11 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Direct Links</h3>
+										<h3>Partners & Collaborators</h3>
 										<ul class="style2">
-											<li><a href="#">Visualize & Contrast Boundaries</a></li>
-											<li><a href="#">Individual Country Files</a></li>
-											<li><a href="#">Global Composite Downloads</a></li>
-											<li><a href="#">API</a></li>
-											<li><a href="#">Known Issues</a></li>
-											<li><a href="#">Contribution Guidelines</a></li>
+											<li><a href="https://www.unocha.org/">UN Office for the Coordination of Humanitarian Affairs</a></li>
+											<li><a href="https://www.unsalb.org/">UN Second Administrative Level Boundaries</a></li>
+											<li><a href="https://grid3.org/">GRID3</a></li>
 										</ul>
 									</section>
 
