--- a/gb5/index.html
+++ b/gb5/index.html
@@ -91,7 +91,7 @@
 
 								<!-- Box -->
 									<section class="box feature" id="cgaz">
-										<a href="#" class="image featured"><img src="images/cgaz.png" alt="" /></a>
+										<a href="globalDownloads.html" class="image featured"><img src="images/cgaz.png" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Global Composite Files</h2>
@@ -106,7 +106,7 @@
 
 								<!-- Box -->
 									<section class="box feature" id="anc">
-										<a href="#" class="image featured"><img src="images/africa.png" alt="" /></a>
+										<a href="joinData.html" class="image featured"><img src="images/africa.png" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Population & Other Data</h2>
