Web updates for 5

--- a/gb5/globalDownloads.html
+++ b/gb5/globalDownloads.html
@@ -30,17 +30,17 @@
 					<nav id="nav">
 						<ul>
 							<li>
-								<a href="right-sidebar.html">Visualize Data</a>
+								<a href="visualize.html">Visualize Data</a>
 							</li>
 							<li>
 								<a href="index.html#features-wrapper">Download Data</a>
 							</li>
 							<li>
-								<a href="#">API</a>
+								<a href="api.html">API</a>
 							</li>
 							
 							<li>
-								<a href="#">Get Involved</a>
+								<a href="contribute.html">Get Involved</a>
 							</li>
 			
 			
