--- a/gb5/index.html
+++ b/gb5/index.html
@@ -27,17 +27,17 @@
 					<nav id="nav">
 						<ul>
 							<li>
-								<a href="right-sidebar.html">Visualize Data</a>
+								<a href="visualize.html">Visualize Data</a>
 							</li>
 							<li>
 								<a href="index.html#features-wrapper">Download Data</a>
 							</li>
 							<li>
-								<a href="#">API</a>
+								<a href="api.html">API</a>
 							</li>
 							
 							<li>
-								<a href="#">Get Involved</a>
+								<a href="contribute.html">Get Involved</a>
 							</li>
 			
 			
@@ -69,7 +69,7 @@
 				</div>
 
 			<!-- Features -->
-				<div id="features-wrapper">
+				<div id="features-wrapper" name="data">
 					<div class="container">
 						<div class="row">
 							<div class="col-4 col-12-medium">
