--- a/gb5/api.html
+++ b/gb5/api.html
@@ -78,37 +78,52 @@
 
 									<h2 id="archive">Web-based Archival Access</h2>
 									<p> File access has been standardized on the github platform. To download
-										a file from any point in time, you can navigate to our <a href="https://github.com/wmgeolab/geoBoundaries/commits/main">commits</a> page, and choose the date (and commit) you are interested in retrieving files from.  For convenience and research replication purposes, we further provide yearly releases of geoBoundaries.  Archives for each of those releases (alongside the hashes used to identify them on git) can be found in the below table.  Releases before 3.0 can be accessed online through the <a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/PGAIQY">Harvard Dataverse</a>.
+										a file from the current release, you can navigate to our <a href="https://github.com/wmgeolab/geoBoundaries/commits/main">commits</a> page, and choose the date (and commit) you are interested in retrieving files from.  For convenience and research replication purposes, we further provide yearly releases of geoBoundaries.  Archives for each of those releases can be found in the below table.  Archived data prior to 1.3.4 is largely unstructured, but is available on <a href="mailto:team@geoboundaries.org">request</a>.
 
 										<div id="ADM0" class="box">
 											<table>
 												<tbody>
 													<tr>
 														<td><b>Release</b></td>
+														<td><b>Date</b></td>
 														<td><b>Single-country</b></td>
 														<td><b>CGAZ</b></td>
 														<td><b>Ancillary</b></td>
 													</tr>
 													<tr>
-														<td>geoBoundaries 3.0</td>
+														<td>geoBoundaries 5.0.0</td>
+														<td>December 19, 2022</td>
 														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
 														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
 														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
-														
 													</tr>
 													<tr>
-														<td>ADM1 (Districts)</td>
-														<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.geojson"><i class='fa fa-download'></i>373MB</a></td>
-														<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.topojson"><i class='fa fa-download'></i>55MB</a></td>
-														<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.zip"><i class='fa fa-download'></i>109MB</a></td>
-														<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.gpkg"><i class='fa fa-download'></i>163MB</a></td>
+														<td>geoBoundaries 4.0.0</td>
+														<td>August 31, 2021</td>
+														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
+														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
+														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
 													</tr>
 													<tr>
-														<td>ADM2 (Municipalities)</td>
-														<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.geojson"><i class='fa fa-download'></i>655MB</a></td>
-														<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.topojson"><i class='fa fa-download'></i>106MB</a></td>
-														<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.zip"><i class='fa fa-download'></i>185MB</a></td>
-														<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.gpkg"><i class='fa fa-download'></i>317MB</a></td>
+														<td>geoBoundaries 3.0.0</td>
+														<td>June 5, 2020</td>
+														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
+														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
+														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
+													</tr>
+													<tr>
+														<td>geoBoundaries 2.0.1</td>
+														<td>December 7, 2019</td>
+														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
+														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
+														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
+													</tr>
+													<tr>
+														<td>geoBoundaries 1.3.4</td>
+														<td>November 11, 2018</td>
+														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
+														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
+														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
 													</tr>
 												</tbody>
 											</table>
