--- a/gb5/api.html
+++ b/gb5/api.html
@@ -62,8 +62,8 @@
 											<footer>
 												<div style="overflow:hidden;"><a href="api.html#archive" style="width:100%;position:relative;top:20px;padding-top:5px;padding-bottom:-10px;" class="button icon solid fa-history">Archival Access <span style="font-size:0.5em;position:relative;top:-15px;line-height:0px;left:30px;"><br />Research Replication</span></a></div>
 												<div style="overflow:hidden;"><a href="api.html#api" style="width:100%;position:relative;top:20px;padding-top:5px;padding-bottom:-10px;" class="button icon solid fa-plug">API <span style="font-size:0.5em;position:relative;top:-15px;line-height:0px;left:30px;"><br />Programmatic access into the database</span></a></div>
-												<div style="overflow:hidden;"><a href="api.html#python" style="width:100%;position:relative;top:20px;padding-top:5px;padding-bottom:-10px;" class="button icon solid fa-file-code">Python <span style="font-size:0.5em;position:relative;top:-15px;line-height:0px;left:30px;"><br />Package & API Access with Python</span></a></div>
-												<div style="overflow:hidden;"><a href="api.html#R" style="width:100%;position:relative;top:20px;padding-top:5px;padding-bottom:-10px;" class="button icon solid fa-file">R <span style="font-size:0.5em;position:relative;top:-15px;line-height:0px;left:30px;"><br />R Library</span></a></div>
+												<!--<div style="overflow:hidden;"><a href="api.html#python" style="width:100%;position:relative;top:20px;padding-top:5px;padding-bottom:-10px;" class="button icon solid fa-file-code">Python <span style="font-size:0.5em;position:relative;top:-15px;line-height:0px;left:30px;"><br />Package & API Access with Python</span></a></div>
+												<div style="overflow:hidden;"><a href="api.html#R" style="width:100%;position:relative;top:20px;padding-top:5px;padding-bottom:-10px;" class="button icon solid fa-file">R <span style="font-size:0.5em;position:relative;top:-15px;line-height:0px;left:30px;"><br />R Library</span></a></div>-->
 											</footer>
 										</section>
 
@@ -88,42 +88,36 @@
 														<td><b>Date</b></td>
 														<td><b>Single-country</b></td>
 														<td><b>CGAZ</b></td>
-														<td><b>Ancillary</b></td>
 													</tr>
 													<tr>
 														<td>geoBoundaries 5.0.0</td>
 														<td>December 19, 2022</td>
-														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
-														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
-														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
+														<td><i class='fa fa-flag'></i> <a href="https://github.com/wmgeolab/geoBoundaries/tree/b7dd6a55701c76a330500ad9d9240f2b9997c6a8">b7dd6a5</a></td>
+														<td><i class='fa fa-globe'></i> <a href="https://github.com/wmgeolab/geoBoundaries/tree/b7dd6a55701c76a330500ad9d9240f2b9997c6a8/releaseData/CGAZ">Download</a></td>
 													</tr>
 													<tr>
 														<td>geoBoundaries 4.0.0</td>
 														<td>August 31, 2021</td>
-														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
-														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
-														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
+														<td><i class='fa fa-flag'></i> <a href="https://github.com/wmgeolab/geoBoundariesArchive_4_0_0/tree/299e00623ece6c03bcb9a751eda6094b1eac85a6">299e006</a></td>
+														<td><i class='fa fa-globe'></i> <a href="https://github.com/wmgeolab/geoBoundariesArchive_4_0_0/tree/299e00623ece6c03bcb9a751eda6094b1eac85a6/releaseData/CGAZ">Download</a></td>
 													</tr>
 													<tr>
 														<td>geoBoundaries 3.0.0</td>
 														<td>June 5, 2020</td>
-														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
-														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
-														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
+														<td><i class='fa fa-flag'></i> <a href="https://github.com/wmgeolab/geoBoundariesArchive_3_0_0/tree/7c8dbc599e312d9204e450aecfa66c204b8cf9b8">7c8dbc5</a></td>
+														<td><i class='fa fa-globe'></i> <a href="https://github.com/wmgeolab/geoBoundariesArchive_3_0_0/tree/7c8dbc599e312d9204e450aecfa66c204b8cf9b8/releaseData/CGAZ">Download</a></td>
 													</tr>
 													<tr>
 														<td>geoBoundaries 2.0.1</td>
 														<td>December 7, 2019</td>
-														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
-														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
-														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
+														<td><i class='fa fa-flag'></i> <a href="https://github.com/wmgeolab/geoBoundariesArchive_2_0_1/tree/375ea48193eda78f74b964f1c898a04bd4cb465d">83fca1f</a></td>
+														<td><i class='fa fa-globe'></i> N/A</td>
 													</tr>
 													<tr>
 														<td>geoBoundaries 1.3.4</td>
 														<td>November 11, 2018</td>
 														<td><i class='fa fa-flag'></i> <a href="#">193f7f6</a></td>
-														<td><a href="#"><i class='fa fa-globe'></i>CGAZLINK</a></td>
-														<td><a href="#"><i class='fa fa-address-card'></i>N/A</a></td>
+														<td><i class='fa fa-globe'></i> N/A</td>
 													</tr>
 												</tbody>
 											</table>
@@ -352,7 +346,7 @@
 							</div>
 
 										
-									<br /><br />
+									<!--<br /><br />
 									<h2 id="python">Python</h2>
 
 									Today, there are two options for using geoBoundaries with python via our API.  The first is a community-built python package, (NAME).  The second is through direct access of the API itself.<br />
@@ -365,7 +359,7 @@
 									API
 									<br /><br />
 									<h2 id="R">R Library</h2>
-									R Library
+									R Library-->
 
 								</div>
 							</div>
