--- a/gb5/index.html
+++ b/gb5/index.html
@@ -56,7 +56,7 @@
 						<div class="row">
 							<div class="col-7 col-12-medium">
 								<h2>This is geoBoundaries.</h2>
-								<p>An open database of political administrative boundaries and the conditions within them.</p>
+								<p>An open database of political administrative boundaries.</p>
 							</div>
 							<div class="col-5 col-12-medium">
 								<ul>
@@ -106,13 +106,13 @@
 
 								<!-- Box -->
 									<section class="box feature" id="anc">
-										<a href="joinData.html" class="image featured"><img src="images/africa.png" alt="" /></a>
+										<a href="simplifiedDownloads.html" class="image featured"><img src="images/africa.png" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Population & Other Data</h2>
-												<p>"What are conditions like?"</p>
+												<h2>Simplified Boundaries</h2>
+												<p>"When you just need a visual."</p>
 											</header>
-											<p>Visualize a range of information on the conditions within each boundary.</p>
+											<p>Simplified files with lower file sizes, for your cartographic needs.</p>
 										</div>
 									</section>
 
@@ -149,7 +149,7 @@
 									<div id="content">
 										<section class="last">
 											<h2>So what's this all about?</h2>
-											<p>Built by the <a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">community</a> and <a href="https://geolab.wm.edu">William & Mary geoLab</a>, the <strong>geoBoundaries Global Database of Political Administrative Boundaries Database</strong> is an online, open license (<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>) resource of information on administrative boundaries (i.e., state, county) for every country in the world. Since 2016, we have tracked approximately 1 million boundaries within over 200 entities, including all UN member states. All boundaries are available to view or download in common file formats, and can be downloaded with ancillary information such as population; the only requirement for use is <a href="index.html#usage">acknowledgement</a>. </p> 
+											<p>Built by the <a href="https://github.com/wmgeolab/geoBoundaries/">community</a> and <a href="https://geolab.wm.edu">William & Mary geoLab</a>, the <strong>geoBoundaries Global Database of Political Administrative Boundaries Database</strong> is an online, open license (<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>) resource of information on administrative boundaries (i.e., state, county) for every country in the world. Since 2016, we have tracked approximately 1 million boundaries within over 200 entities, including all UN member states. All boundaries are available to view or download in common file formats; the only requirement for use is <a href="index.html#usage">acknowledgement</a>. </p> 
 											</p>
 										</section>
 									</div>
@@ -251,9 +251,9 @@
 			<script>
 				$("#countryData").click(function(){window.location.href = "countryDownloads.html";});
 				$("#countryData").hover(function(){ $(this).toggleClass('classWithShadow');});
-				$("#cgaz").click(function(){window.location.href = "global.html";});
+				$("#cgaz").click(function(){window.location.href = "globalDownloads.html";});
 				$("#cgaz").hover(function(){ $(this).toggleClass('classWithShadow');});
-				$("#anc").click(function(){window.location.href = "ancillary.html";});
+				$("#anc").click(function(){window.location.href = "simplifiedDownloads.html";});
 				$("#anc").hover(function(){ $(this).toggleClass('classWithShadow');});
 			</script>
 
