Update contributors links

--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -218,7 +218,7 @@
 										<li><a href="index.html#citation">Requirements for Use</a></li>
 										<li><a href="https://github.com/wmgeolab/geoBoundaries/issues">Known Issues</a></li>
 										<li><a href="https://github.com/wmgeolab/geoBoundaries#getting-involved">Get Involved</a></li>
-										<li><a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">We Made This</a></li>
+										<li><a href="https://github.com/wmgeolab/geoBoundaries#contributors-">We Made This</a></li>
 									</ul>
 									<br />
 									<div id="mc_embed_signup">
