Init better comparison

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ L.tileLayer(
 						<header>
 							<h1>Partners, Sponsors & Contributors</h1>
 							<p>Thanks to our partners, sponsors, and <a
-									href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">community of
+									href="https://github.com/wmgeolab/geoBoundaries#contributors-">community of
 									contributors</a> for making geoBoundaries possible. </p>
 						</header>
 
