--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 							autoResize:false,
 							resizableColumns: true,
 							responsiveLayout: "collapse",
-							groupBy: ["Continent", "boundaryName"],
+							groupBy: ["boundaryName"],
 							//autoColumns:true,
 							columns: [                 //define the table columns
 								{ title: "Name", cssClass:"greyHighlight", field: "boundaryName", visible: true, responsive: 0, headerFilter: 'input', width: "20px", headerVertical: false },
