Update file sizes for launch

--- a/gb5/globalDownloads.html
+++ b/gb5/globalDownloads.html
@@ -115,24 +115,21 @@
 												</tr>
 												<tr>
 													<td>ADM0 (Countries)</td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.geojson"><i class='fa fa-download'></i>379MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.topojson"><i class='fa fa-download'></i>54MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.zip"><i class='fa fa-download'></i>99MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.gpkg"><i class='fa fa-download'></i>162MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.geojson"><i class='fa fa-download'></i>~400MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.zip"><i class='fa fa-download'></i>~100MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.gpkg"><i class='fa fa-download'></i>~150MB</a></td>
 												</tr>
 												<tr>
 													<td>ADM1 (Districts)</td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.geojson"><i class='fa fa-download'></i>373MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.topojson"><i class='fa fa-download'></i>55MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.zip"><i class='fa fa-download'></i>109MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.gpkg"><i class='fa fa-download'></i>163MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.geojson"><i class='fa fa-download'></i>~350MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.zip"><i class='fa fa-download'></i>~100MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.gpkg"><i class='fa fa-download'></i>~150MB</a></td>
 												</tr>
 												<tr>
 													<td>ADM2 (Municipalities)</td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.geojson"><i class='fa fa-download'></i>655MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.topojson"><i class='fa fa-download'></i>106MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.zip"><i class='fa fa-download'></i>185MB</a></td>
-													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.gpkg"><i class='fa fa-download'></i>317MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.geojson"><i class='fa fa-download'></i>~500MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.zip"><i class='fa fa-download'></i>~150MB</a></td>
+													<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.gpkg"><i class='fa fa-download'></i>~250MB</a></td>
 												</tr>
 											</tbody>
 										</table>
