--- a/gbContribute.html
+++ b/gbContribute.html
@@ -200,6 +200,12 @@
 														</td>
 													</tr>
 													<tr>
+														<td>Canonical Name:</td>
+														<td>
+															<input name="canonical" type="text" placeholder=" ">
+														</td>
+													</tr>
+													<tr>
 														<td>License<span style="color:red">*</span>:</td>
 														<td>
 															<select name="license" type="text" placeholder=" " required>
@@ -226,6 +232,7 @@
 															<input name="license_detail" type="text" placeholder=" ">
 														</td>
 													</tr>
+
 												</table>
 											</div>
 					
